# mangago_downloader

./: GUI_README.md  README.md  gui_config.json  launcher.py  pyproject.toml
cli/: main_cli.py
gui/: __init__.py  config.py  controllers.py  details_widget.py  download_widget.py  main_gui.py  main_window.py  progress_widget.py  results_widget.py  search_widget.py  styles.py  workers.py
src/: converter.py  downloader.py  models.py  search.py  utils.py
